fix navbar so that links are open by default, and hamburger shows up on small screen. some stylistic changes to colors and link hovers

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,3 +1,11 @@
+h1 {
+  text-align: center;
+}
+
+:root {
+  --mainColor: #89CFF0;
+}
+
 #content {
   margin-left: auto;
   margin-right: auto;
@@ -5,50 +13,70 @@
   align-content: center;
 }
 
-/* Style the navigation menu */
-.topnav {
-  overflow: hidden;
-  background-color: #d0f0c0;
-  position: sticky;
-  top: 0px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 1040px;
+a {
+  background:
+     linear-gradient(
+       to bottom, var(--mainColor) 0%,
+       var(--mainColor) 100%
+     );
+    background-position: 0 100%;
+    background-repeat: repeat-x;
+    background-size: 2px 0px;
+  color: #000;
+  text-decoration: none;
+  transition: background-size .2s;
 }
 
-/* Hide the links inside the navigation menu (except for logo/home) */
-.topnav #myLinks {
+a:hover {
+  background-size: 4px 50px;
+}
+
+/* Style the navigation menu */
+.topnav {
+  background-color: white;
+  overflow: hidden;
+  position: sticky;
+  top: 0px;
+  border-bottom: 2px solid #89CFF0;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 16x;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
   display: none;
 }
 
-/* Style navigation menu links */
-.topnav a {
-  color: black;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  display: block;
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
 }
 
-/* Style the hamburger menu */
-.topnav a.icon {
-  background: #89CFF0;
-  display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-/* Add a grey background color on mouse-over */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Style the active link (or home/logo) */
-.active {
-  background-color: #89CFF0;
-  color: white;
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
 
 #greeting-container {
@@ -60,6 +88,7 @@
   display: flex;
   width: 100%;
 }
+
 .column {
   -webkit-flex: 1;
   -ms-flex: 1;
@@ -90,7 +119,8 @@ div.gallery {
 }
 
 div.gallery:hover {
-  border: 1px solid #777;
+  border: 1pz solid black;
+  box-shadow: 0px 0px 2px black;
 }
 
 div.gallery img {
@@ -104,9 +134,5 @@ div.desc {
 }
 
 footer {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1040px;
-  background-color: #89CFF0;
-  min-height: 2em;
+  border-bottom: 2px solid #89CFF0;
 }
